codex-rs/tui/src/snapshots/codex_tui__app__tests__clear_ui_after_long_transcript_fresh_header_only.snap
---
source: tui/src/app.rs
expression: rendered
---
╭─────────────────────────────────────────────╮
│ >_ BCIP Agent (v<VERSION>)                │
│                                             │
│ model:     gpt-test high   /model to change │
│ directory: /tmp/project                     │
╰─────────────────────────────────────────────╯
