codex-rs/tui/src/snapshots/codex_tui__app__tests__clear_ui_header_fast_status_fast_capable_models.snap
---
source: tui/src/app/tests.rs
assertion_line: 3731
expression: rendered
---
╭─────────────────────────────────────────────╮
│ 🌸 云熙 (v<VERSION>)                        │
│                                             │
│ model:     gpt-5.4 xhigh   /model to change │
│ directory: /tmp/project                     │
╰─────────────────────────────────────────────╯
